# Entangle

./: .gitignore  README.md  cloudlab_setup.sh  pyproject.toml  setup.sh
egger/: .gitignore  Cargo.toml  README.md  build.rs
egger/extractor/: extract_post_condition.py  visualize.py
egger/src/: lib.rs  load.rs  main.rs  metadata.rs  model.rs  utils.rs
egger/src/rewrite/: elementary_lemma.rs  hack_lemma.rs  inverse_lemma.rs  lambda_rewrite.rs  mask_lemma.rs  mod.rs  noncompute_lemma.rs  norm_activation_lemma.rs  prune_lemma.rs  reshape_lemma.rs
egger/src/special/: hlo_lemma.rs  hlo_model.rs  mod.rs  vllm_lemma.rs  vllm_model.rs
egger/src/symval/: mod.rs
egger/template/special/: special_lemma.rs  special_model.rs
entangle/: __init__.py
entangle/convert/: convert.py
entangle/custom_op/: __init__.py
entangle/graph/: __init__.py  config.py
entangle/ops/: __init__.py  hlo.py  op.py  tg.py  torch.py
entangle/pgraph/: hlo.py  pickleable.py  visualization.py
entangle/sgraph/: __init__.py  egraph.py  sexpr.py  sgraph.py  sskeleton.py  transform.py  visualization.py
entangle/sym/: __init__.py  sym_manager.py
entangle/tools/: __init__.py  config.py  egg.py  tg.py  tginfer.py  utils.py
entangle/utils/: __init__.py  (+4 more)
examples/: .gitignore  README.md  capture_example.py  detect_bug_grad_accumulation.py  detect_bug_missing_allreduce_under_wrong_config.py  detect_bug_missing_layernorm_allreduce.py  detect_bug_missing_switchmlp_allreduce.py  run_all.py  verify_aws_llama.py  verify_gpt.py  verify_qwen2.py  visualization.py
torchgraph/: README.md  __init__.py
(+414 files in other folders)
