[project]
name = "entangle"
version = "0.1.0"
description = "Artifact of ASPLOS 2026 paper: 'It takes two to entangle'"
authors = [{ name = "Zhanghan Wang", email = "hankzhwang@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.0",
    "flask>=3.1.0",
    "graphviz>=0.20.3",
    "matplotlib>=3.9.2",
    "networkx>=3.2.1",
    "pandas>=2.3.3",
    "pydot>=3.0.2",
    "pyparsing>=3.2.0",
    "pytimeparse==1.1.8",
    "pyvis>=0.3.2",
    "rich>=13.9.4",
    "seaborn>=0.13.2",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "tqdm==4.66.5",
    "z3-solver>=4.13.3.0",
]
license = "Apache-2.0"

[project.scripts]
tg = "entangle.tools.tg:main"
tginfer = "entangle.tools.tginfer:main"

[tool.setuptools]
packages = ["entangle", "torchgraph"]
